--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,10 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8c1J8U5oBvV9vKg/3hF1O8g2kJjQ2cK3s" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/7d80546296.js" crossorigin="anonymous"></script>
 </body>
 </html>
