--- a/client/src/index.html
+++ b/client/src/index.html
@@ -13,5 +13,6 @@
 <body>
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/7d80546296.js" crossorigin="anonymous"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 </html>
